[package]
name = "tetsy-wordlist"
version = "1.3.1"
description = "Word list used to generate brain wallets for Tetsy."
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/openvapory/tetsy-wordlist"
edition = "2018"

[dependencies]
lazy_static = "1.0"
rand = "0.7"
